[package]
name = "fast_trie"
description = "A memory efficient trie library."
version = "0.1.4"
edition = "2021"

readme = "README.md"
repository = "https://github.com/alexjthomson/fast_trie"
documentation = "https://docs.rs/fast_trie"
homepage = "https://github.com/alexjthomson/fast_trie"
license = "MIT"

keywords = ["trie", "string-matching", "efficient", "library", "serde"]
categories = ["text-processing", "algorithms", "data-structures"]

[dependencies]
serde = { version = "1", optional = true }

[dev-dependencies]
serde_json = { version = "1" }

[features]
default = [ "string" ]
string = []